fix: core layout horizontal with safari - Fixes issue with safari not propery aligning bottom

--- a/packages/core/src/styles/layout/_type-horizontal.scss
+++ b/packages/core/src/styles/layout/_type-horizontal.scss
@@ -127,8 +127,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  align-content: flex-start;
+  justify-items: flex-start;
   align-items: flex-start;
   width: 100%;
   margin: 0;
